--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             },
             {
               title:" On My Way....",
-              artist:"Sabrina Carpenter",
+              artist:"Sabrina",
               image:"alan walker.jpg",
               audio:"Alan Walker, Sabrina Carpenter & Farruko  - On My Way.mp3"
             },
